Update README to include steps to run DynamicReflectiveInspector and update logs for refactoring doc

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
     mavenCentral()
 }
 
+application {
+    mainClassName = project.hasProperty("mainClass") ? getProperty("mainClass") : "Driver"
+}
+
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.2")
